// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Base Component) CheckboxSVG matching the snapshot 1`] = `
.c1 {
  fill: none;
  stroke-width: 20;
  stroke-linecap: round;
  stroke: #FFFFFF;
}

.c0 {
  -webkit-animation: hBmzvO 0.25s linear forwards;
  animation: hBmzvO 0.25s linear forwards;
  stroke: transparent;
  stroke-width: 10;
  stroke-linecap: round;
  stroke-dashoffset: 200;
  fill: none;
  stroke: #0073D1;
  stroke-width: 20;
  stroke-linecap: round;
}

<CheckboxSVG>
  <svg
    viewBox="0 0 190 190"
    xmlns="http://www.w3.org/2000/svg"
  >
    <Styled(Rect)>
      <Rect
        className="c0"
      >
        <rect
          className="c0"
          height="185"
          rx="10"
          ry="10"
          width="185"
          x="2.5"
          y="2.5"
        />
      </Rect>
    </Styled(Rect)>
    <Styled(Check)>
      <Check
        className="c1"
      >
        <polyline
          className="c1"
          points="38.75 98.75 77.75 134.75 151.25 55.25"
        />
      </Check>
    </Styled(Check)>
  </svg>
</CheckboxSVG>
`;

exports[`(Component) StyledCheckboxSVG matching the snapshot 1`] = `
.c2 {
  fill: none;
  stroke-width: 20;
  stroke-linecap: round;
  stroke: #FFFFFF;
}

.c1 {
  -webkit-animation: hBmzvO 0.25s linear forwards;
  animation: hBmzvO 0.25s linear forwards;
  stroke: transparent;
  stroke-width: 10;
  stroke-linecap: round;
  stroke-dashoffset: 200;
  fill: none;
  stroke: #0073D1;
  stroke-width: 20;
  stroke-linecap: round;
}

.c0 {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: .9rem;
}

<Styled(CheckboxSVG)
  checked={false}
>
  <CheckboxSVG
    checked={false}
    className="c0"
  >
    <svg
      className="c0"
      viewBox="0 0 190 190"
      xmlns="http://www.w3.org/2000/svg"
    >
      <Styled(Rect)
        checked={false}
      >
        <Rect
          checked={false}
          className="c1"
        >
          <rect
            className="c1"
            height="185"
            rx="10"
            ry="10"
            width="185"
            x="2.5"
            y="2.5"
          />
        </Rect>
      </Styled(Rect)>
      <Styled(Check)
        checked={false}
      >
        <Check
          checked={false}
          className="c2"
        >
          <polyline
            className="c2"
            points="38.75 98.75 77.75 134.75 151.25 55.25"
          />
        </Check>
      </Styled(Check)>
    </svg>
  </CheckboxSVG>
</Styled(CheckboxSVG)>
`;
